--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -1,29 +1,79 @@
 <nav class="navbar navbar-expand-lg navbar-light navbar-costum">
-    <div class="container">
-        <a class="navbar-brand nav-link-title" href="" routerLink="/" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }">{{ title }}</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <div class="container">
+    <a
+      class="navbar-brand nav-link-title"
+      href=""
+      routerLink="/"
+      routerLinkActive="selected"
+      [routerLinkActiveOptions]="{ exact: true }"
+      >{{ title }}</a
+    >
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto" id="menu-links">
-                <li class="nav-item">
-                    <a class="nav-link-title" routerLink="/my-recipes" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }">Mes recettes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link-title" routerLink="/inscription" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }"> S'inscrire</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link-title dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Administration
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Tableau de bord</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item text-danger" href="#">Déconnexion</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto" id="menu-links">
+        <li *ngIf="isLogged" class="nav-item">
+          <a
+            class="nav-link-title"
+            routerLink="/my-recipes"
+            routerLinkActive="selected"
+            [routerLinkActiveOptions]="{ exact: true }"
+            >Mes recettes</a
+          >
+        </li>
+        <li *ngIf="!isLogged" class="nav-item">
+          <a
+            class="nav-link-title"
+            routerLink="/inscription"
+            routerLinkActive="selected"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
+            S'inscrire</a
+          >
+          /
+          <a
+            class="nav-link-title"
+            routerLink="/login"
+            routerLinkActive="selected"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
+            Se connecter</a
+          >
+        </li>
+        <li *ngIf="isLogged" class="nav-item dropdown">
+          <a
+            class="nav-link-title dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            {{ username }}
+          </a>
+          <div
+            class="dropdown-menu dropdown-menu-right"
+            aria-labelledby="navbarDropdown"
+          >
+            <a class="dropdown-item" href="#">Mon tableau de bord</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item text-danger" (click)="logout()"
+              >Déconnexion</a
+            >
+          </div>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
