--- a/front/src/app/loader/loader/loader.component.css
+++ b/front/src/app/loader/loader/loader.component.css
@@ -17,6 +17,7 @@
     -webkit-animation: spin 2s linear infinite;
     -moz-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
+    margin-left: 7px;
 }
 
 .loading-message {
