--- a/front/src/app/loader/loader/loader.component.html
+++ b/front/src/app/loader/loader/loader.component.html
@@ -1,8 +1,8 @@
 <div class="progress-loader" [hidden]="!loading">
-    <div class="loading-spinner">
-        <div class="carre-loading">
-            <img [src]="imageApiUrl">
-            <span class="loading-message">Patientez...</span>
-        </div>
+  <div class="loading-spinner">
+    <div class="carre-loading">
+      <img [src]="imageApiUrl" />
+      <span class="loading-message">Patientez...</span>
     </div>
+  </div>
 </div>
