feat(upgrade): angular and symfony upgrade (angular from 11 to 14, Symfony from 4.4 to 5.4)

--- a/front/src/app/header/header.component.css
+++ b/front/src/app/header/header.component.css
@@ -8,7 +8,7 @@ a {
 }
 
 ul>.nav-item>a {
-    padding: 18px 19px;
+    padding: 14px 19px;
 }
 
 a.nav-link-title {
@@ -29,4 +29,8 @@ li.nav-item a:hover {
 }
 #menu-links>.nav-item>a.selected {
   background-color: #fcfcfc26;
+}
+.bg-bluegray-900 {
+  background: #518fa4 !important;
+  color: #a4e1ff !important;
 }
