--- a/front/src/app/recipe/my-recipes/my-recipes.component.html
+++ b/front/src/app/recipe/my-recipes/my-recipes.component.html
@@ -1,9 +1,15 @@
 <div class="container" id="wrapper">
   <div class="row col-12 shadow-sm p-3 mb-0 bg-white rounded mt-5">
     <div class="w-100">
-      <h3 class="float-left"><i class="fas fa-list"></i> Mes recettes</h3>
-      <button class="btn btn-success float-right" (click)="goToCreateForm()">
-        <i class="fas fa-plus"></i> Créer une recette
+      <h3 class="float-start"><i class="fas fa-list"></i> Mes recettes</h3>
+      <button
+        (click)="goToCreateForm()"
+        pButton
+        pRipple
+        type="button"
+        class="p-button-raised p-button-success float-end"
+      >
+        <i class="fas fa-plus"></i>&nbsp;Créer une recette
       </button>
     </div>
   </div>
@@ -28,7 +34,7 @@
       class="col-sm-12 col-md-6 col-lg-4 mb-5"
       *ngFor="let recipe of recipes; let i = index"
     >
-      <div class="card w-100 mh-100" style="min-height: 560px">
+      <div class="card w-100 mh-100" style="min-height: 474px">
         <img
           src="{{ uploadImage }}{{ recipe.images[0].name }}"
           [ngStyle]="{ 'max-height.px': '190' }"
@@ -37,9 +43,9 @@
         />
         <div class="card-body">
           <h5 class="card-title font-weight-bold">
-            {{ recipe.title | slice : 0 : 20 }}...
+            {{ recipe.title | slice : 0 : 41 }}<span *ngIf="recipe.title.length > 41">...</span>
           </h5>
-          <h6 class="card-subtitle mb-2 text-muted">{{ recipe.subtitle }}</h6>
+          <h6 class="card-subtitle mb-2 text-muted">{{ recipe.subtitle| slice : 0 : 60}}<span *ngIf="recipe.subtitle.length > 60">...</span></h6>
           <p class="card-text">{{ recipe.description | slice : 0 : 85 }}...</p>
           <hr />
           <strong>Crée par:</strong> <br />
@@ -49,66 +55,24 @@
           <div class="tools-btn-recette">
             <hr style="border: 1px dashed rgb(236, 236, 236)" />
             <button
-              class="btn btn-danger text-white"
-              (click)="deleteRecipe(recipe.id)"
+              (click)="openDeleteConfirmationModal(recipe.id)"
+              pButton
+              pRipple
+              type="button"
+              class="p-button-raised p-button-danger"
             >
-              <i class="fas fa-trash-alt"></i> Supprimer
+              <i class="fas fa-trash-alt"></i>&nbsp;Supprimer
             </button>
             <button
-              class="btn btn-primary float-right"
+              pButton
+              pRipple
+              type="button"
+              class="p-button-raised float-end"
               (click)="preEditRecipe(recipe.id)"
             >
-              <i class="fas fa-edit"></i> Editer
+              <i class="fas fa-edit"></i>&nbsp;Editer
             </button>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- La modal de confirmation -->
-  <div
-    class="modal fade"
-    id="modalConfirmation"
-    tabindex="-1"
-    role="dialog"
-    aria-labelledby="modalConfirmationLabel"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="modalConfirmationLabel">
-            Confirmer cette action
-          </h5>
-          <button
-            type="button"
-            class="close"
-            data-dismiss="modal"
-            aria-label="Close"
-          >
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>
-            Vous êtes sur le point de <b>supprimer</b> cette recette. Cette
-            action est définitive et irréversible. <br />
-            <br />
-            Vous souhaitez continuer quand même?
-          </p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">
-            Annuler
-          </button>
-          <button
-            type="button"
-            class="btn btn-primary"
-            (click)="confirmDelete()"
-          >
-            Continuer
-          </button>
         </div>
       </div>
     </div>
