--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -1,3 +1,25 @@
+<div
+  class="bg-bluegray-900 text-gray-100 p-3 flex justify-content-between lg:justify-content-center align-items-center flex-wrap"
+>
+  <div class="font-bold mr-8">🔥 Hot Deals!</div>
+  <div class="align-items-center hidden lg:flex">
+    <span class="line-height-3">
+      En ce moment, profitez d'une large variété sur les produits faits maison'
+    </span>
+  </div>
+  <a class="flex align-items-center ml-2 mr-8">
+    <a class="text-white" href="#"
+      ><span class="underline font-bold">En savoir plus</span></a
+    >
+  </a>
+  <a
+    pRipple
+    class="flex align-items-center no-underline justify-content-center border-circle text-gray-50 hover:bg-bluegray-700 cursor-pointer transition-colors transition-duration-150"
+    style="width: 2rem; height: 2rem"
+  >
+    <i class="pi pi-times"></i>
+  </a>
+</div>
 <nav class="navbar navbar-expand-lg navbar-light navbar-costum">
   <div class="container">
     <a
@@ -56,15 +78,15 @@
             href="#"
             id="navbarDropdown"
             role="button"
-            data-toggle="dropdown"
+            data-bs-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
           >
             {{ username }}
           </a>
           <div
-            class="dropdown-menu dropdown-menu-right"
-            aria-labelledby="navbarDropdown"
+            class="dropdown-menu dropdown-menu-end"
+            aria-labelledby="dropdownMenu"
           >
             <a class="dropdown-item" href="#">Mon tableau de bord</a>
             <div class="dropdown-divider"></div>
