--- a/front/src/app/home/home.component.css
+++ b/front/src/app/home/home.component.css
@@ -12,7 +12,7 @@ div#typedtext {
     letter-spacing: 6px;
 }
 
-.typewrite-home {
+.anim-home {
     font-size: 2em;
     max-height: 48vh;
     height: 30vh;
@@ -23,3 +23,15 @@ div#typedtext {
     display: table-cell;
     vertical-align: middle
 }
+  .container-animation {
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+  .animed-text {
+    font-weight: 200;
+    font-size: 28px;
+    color: #0fb2d2;
+  }
