--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="expired">Session expirée!</div>
 <div class="card mt-5" *ngIf="!isLoggedIn">
   <h5 class="title-login"><strong>Se connecter</strong></h5>
   <hr />
@@ -32,7 +33,7 @@
           </div>
         </div>
       </div>
-      <div class="form-group">
+      <div class="form-group mt-3">
         <label for="password">Mot de passe</label>
         <input
           type="password"
@@ -46,11 +47,21 @@
           </div>
         </div>
       </div>
-      <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary btn-block mb-4">
+      <div class="form-group mt-5">
+        <button
+          [disabled]="loading"
+          pButton
+          pRipple
+          label="Se connecter"
+          icon="pi pi-user"
+          class="w-full"
+        >
+          <span *ngIf="loading" class="spinner-border spinner-border-sm"></span>
+        </button>
+        <!--<button [disabled]="loading" class="btn btn-primary btn-block mb-4">
           <span *ngIf="loading" class="spinner-border spinner-border-sm"></span>
           Se connecter
-        </button>
+        </button>-->
         <a routerLink="../inscription" class="btn btn-link">S'inscrire</a>
       </div>
     </form>
