--- a/front/src/app/registration/registration.component.html
+++ b/front/src/app/registration/registration.component.html
@@ -1,52 +1,124 @@
 <div class="container" id="wrapper">
-    <div class="row col-12 shadow-sm p-3 bg-white rounded mt-5">
-        <h3 style="text-align: center;"><i class="fas fa-pen"></i> Devenir membre</h3>
-    </div>
-    <div *ngIf="messageHandler !== '' " class="row col-12 alert {{ messageHandler.typeOperation }} p-2 mt-3">
-        <i class="fas {{messageHandler.iconOperation}}" style="margin-top:.29rem"></i><span class="pl-2">{{messageHandler.messageOperation}}</span>
-    </div>
-    <form #formUser="ngForm" (ngSubmit)="onUserRegistration(formUser)">
-        <div class="row col-12 shadow-sm p-3 mb-5 bg-white rounded mt-2">
-            <div class="col-md-6">
-                <label for="nom"><i>Nom :</i></label>
-                <input type="text" class="form-control" name="lastname" [(ngModel)]="newUser.lastname" #trackLastname="ngModel" required>
-                <p class="alert" *ngIf="!trackLastname.valid && trackLastname.touched">Le Nom est obligatoire!</p>
-            </div>
-            <div class="col-md-6">
-                <label for="prenom">Prénom:</label>
-                <input type="text" class="form-control" name="firstname" [(ngModel)]="newUser.firstname" #trackFirstname="ngModel" #prenom="ngModel" required>
-                <p class="alert" *ngIf="!trackFirstname.valid && trackFirstname.touched">Le Prénom est obligatoire!</p>
-            </div>
-            <div class="col-md-6">
-                <label for="pseudo">Pseudo:</label>
-                <input type="text" class="form-control" name="username" [(ngModel)]="newUser.username" #trackUsername="ngModel" #username="ngModel" required>
-                <p class="alert" *ngIf="!trackUsername.valid && trackUsername.touched">Le pseudo est obligatoire!</p>
-            </div>
-            <div class="col-md-6">
-                <label for="email">Adresse Email:</label>
-                <input type="text" class="form-control" name="email" [(ngModel)]="newUser.email" #trackEmail="ngModel" #email="ngModel" required>
-                <p class="alert" *ngIf="!trackEmail.valid && trackEmail.touched">L'Email est obligatoire!</p>
-            </div>
-            <div class="col-md-6">
-                <label for="bithdate"><i>Date de naissance :</i></label>
-                <div class="input-group">
-                    <input class="form-control" placeholder="jj-mm-aaaa" name="birthdate" [(ngModel)]="newUser.birthdate" ngbDatepicker #d="ngbDatepicker">
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-secondary far fa-calendar-alt" (click)="d.toggle()" type="button"></button>
-                    </div>
-                </div>
-                <!--  <input class="form-control" placeholder="jj-mm-aaaa" name="birthdate" ngbDatepicker [(ngModel)]="newUser.birthDate" #birthDate="ngModel" required> -->
-            </div>
-            <div class="col-md-6">
-                <label for="nom"><i>Mot de passe :</i></label>
-                <input type="password" class="form-control" name="password" [(ngModel)]="newUser.password" #trackPassword="ngModel" required>
-                <p class="alert" *ngIf="!trackPassword.valid && trackPassword.touched">Le mot de passe est obligatoire!</p>
-            </div>
-            <div style="float:right;" class="col-12 mt-3">
-                <button class="btn btn-success float-right" type="submit">Enregistrer</button>
-            </div>
-
+  <div class="row col-12 shadow-sm p-3 bg-white rounded mt-5">
+    <h3 style="text-align: center">
+      <i class="fas fa-pen"></i> Devenir membre
+    </h3>
+  </div>
+  <div
+    *ngIf="messageHandler !== ''"
+    class="row col-12 alert {{ messageHandler.typeOperation }} p-2 mt-3"
+  >
+    <i
+      class="fas {{ messageHandler.iconOperation }}"
+      style="margin-top: 0.29rem"
+    ></i
+    ><span class="pl-2">{{ messageHandler.messageOperation }}</span>
+  </div>
+  <form #formUser="ngForm" (ngSubmit)="onUserRegistration(formUser)">
+    <div class="row col-12 shadow-sm p-3 mb-5 bg-white rounded mt-2">
+      <div class="col-md-6">
+        <label for="nom"><i>Nom :</i></label>
+        <input
+          type="text"
+          class="form-control"
+          name="lastname"
+          [(ngModel)]="newUser.lastname"
+          #trackLastname="ngModel"
+          required
+        />
+        <p class="alert" *ngIf="!trackLastname.valid && trackLastname.touched">
+          Le Nom est obligatoire!
+        </p>
+      </div>
+      <div class="col-md-6">
+        <label for="prenom">Prénom:</label>
+        <input
+          type="text"
+          class="form-control"
+          name="firstname"
+          [(ngModel)]="newUser.firstname"
+          #trackFirstname="ngModel"
+          #prenom="ngModel"
+          required
+        />
+        <p
+          class="alert"
+          *ngIf="!trackFirstname.valid && trackFirstname.touched"
+        >
+          Le Prénom est obligatoire!
+        </p>
+      </div>
+      <div class="col-md-6">
+        <label for="pseudo">Pseudo:</label>
+        <input
+          type="text"
+          class="form-control"
+          name="username"
+          [(ngModel)]="newUser.username"
+          #trackUsername="ngModel"
+          #username="ngModel"
+          required
+        />
+        <p class="alert" *ngIf="!trackUsername.valid && trackUsername.touched">
+          Le pseudo est obligatoire!
+        </p>
+      </div>
+      <div class="col-md-6">
+        <label for="email">Adresse Email:</label>
+        <input
+          type="text"
+          class="form-control"
+          name="email"
+          [(ngModel)]="newUser.email"
+          #trackEmail="ngModel"
+          #email="ngModel"
+          required
+        />
+        <p class="alert" *ngIf="!trackEmail.valid && trackEmail.touched">
+          L'Email est obligatoire!
+        </p>
+      </div>
+      <div class="col-md-6">
+        <label for="bithdate"><i>Date de naissance :</i></label>
+        <div class="input-group">
+          <input
+            class="form-control"
+            placeholder="jj-mm-aaaa"
+            name="birthdate"
+            [(ngModel)]="newUser.birthdate"
+            ngbDatepicker
+            #d="ngbDatepicker"
+          />
+          <div class="input-group-append">
+            <button
+              class="btn btn-outline-secondary far fa-calendar-alt"
+              (click)="d.toggle()"
+              type="button"
+            ></button>
+          </div>
         </div>
-        {{formUser.value | json}}
-    </form>
+        <!--  <input class="form-control" placeholder="jj-mm-aaaa" name="birthdate" ngbDatepicker [(ngModel)]="newUser.birthDate" #birthDate="ngModel" required> -->
+      </div>
+      <div class="col-md-6">
+        <label for="nom"><i>Mot de passe :</i></label>
+        <input
+          type="password"
+          class="form-control"
+          name="password"
+          [(ngModel)]="newUser.password"
+          #trackPassword="ngModel"
+          required
+        />
+        <p class="alert" *ngIf="!trackPassword.valid && trackPassword.touched">
+          Le mot de passe est obligatoire!
+        </p>
+      </div>
+      <div style="float: right" class="col-12 mt-3">
+        <button class="btn btn-success float-end" type="submit">
+          Enregistrer
+        </button>
+      </div>
+    </div>
+    {{ formUser.value | json }}
+  </form>
 </div>
