--- a/front/src/app/sharing/forms/recipe.component.html
+++ b/front/src/app/sharing/forms/recipe.component.html
@@ -1,18 +1,14 @@
-<!-- <form #f="ngForm" (ngSubmit)="saveEditRecipe(f)"> -->
-<form [formGroup]="recipeForm" (ngSubmit)="saveEditRecipe()">
-  <div class="modal-header" mat-dialog-title>
-    <h5 class="modal-title" id="modalEditRecetteLabel">{{ operationTitle }}</h5>
+<form [formGroup]="recipeForm" (ngSubmit)="saveRecipe()">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modalEditRecetteLabel">{{ operationTitle }}</h4>
     <button
-      mat-button
-      mat-dialog-close
+      *ngIf="isEdit"
       type="button"
-      class="close"
-      data-dismiss="modal"
+      class="btn-close"
+      data-bs-dismiss="modal"
       aria-label="Close"
       (click)="closeModal()"
-    >
-      <span aria-hidden="true">&times;</span>
-    </button>
+    ></button>
   </div>
 
   <div class="modal-body" mat-dialog-content>
@@ -31,11 +27,11 @@
           *ngIf="f.title.touched && f.title.invalid"
           class="alert alert-danger"
         >
-          <div *ngIf="f.title.errors && f.title.errors.required">
+          <div class="info-validation" *ngIf="f.title.errors && f.title.errors.required">
             Le titre est obligatoire!
           </div>
-          <div *ngIf="f.title.errors && f.title.errors.minlength">
-            Le titre doit contenir plus de 15 caractères
+          <div class="info-validation" *ngIf="f.title.errors && f.title.errors.minlength">
+            Le titre doit contenir au moins 15 caractères
           </div>
         </div>
       </div>
@@ -57,7 +53,7 @@
             >
           </div>
           <select
-            class="custom-select"
+            class="form-select custom-select"
             id="inputGroupSelect01"
             name="category"
             formControlName="category"
@@ -81,8 +77,12 @@
           formControlName="description"
           required
         ></textarea>
+        <div class="info-validation" *ngIf="f.description.errors && f.description.errors.minlength">
+          La discription doit contenir au moins 15 caractères
+        </div>
       </div>
-      <div class="col-md-6">
+
+      <div class="col-md-6 mt-3">
         <label for="city">Ville :</label>
         <input
           type="text"
@@ -91,33 +91,42 @@
           formControlName="city"
           required
         />
+        <div class="info-validation" *ngIf="f.city.errors && f.city.errors.minlength">
+          La ville doit contenir au moins 3 caractères
+        </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 mt-3">
         <label for="zip">Code Postal :</label>
         <input
+          max="5"
+          min="5"
           type="text"
           class="form-control"
           name="zip"
           formControlName="zip"
           required
         />
+        <div class="info-validation" *ngIf="f.zip.errors && f.zip.errors.required">
+          Le code postale doit contenir 5 caractères
+        </div>
+        <div class="info-validation" *ngIf="f.zip.errors && f.zip.errors.minlength">
+          Le code postale doit contenir 5 caractères
+        </div>
       </div>
 
-      <div class="col-md-12 mt-3 custom-file">
+      <div class="input-group mt-3">
         <input
+          type="file"
+          class="form-control custom-file-input"
           type="file"
           name="images"
           id="file"
           multiple
           (change)="loadFile($event)"
-          class="custom-file-input"
+          aria-describedby="inputAjoutImage"
+          aria-label="Upload"
         />
-        <label for="file" class="custom-file-label"
-          >Choississez des fichiers</label
-        >
       </div>
-
-      <hr />
       <div
         class="input-group mt-3 col-md-3"
         style="min-width: 240px !important"
@@ -145,20 +154,19 @@
       style="background-color: rgb(238, 238, 238)"
       *ngIf="isEdit"
     >
-      <div *ngFor="let image of thumbnails">
-        <div class="col-lg-2 col-md-2">
+      <div *ngFor="let image of thumbnails" class="col-lg-2 col-md-2">
+        <div class="d-flex align-items-center">
           <a
             id="btn-delete-image"
             class="btn btn-danger btn-delete-image"
             (click)="preDeleteThumbnail(image.id)"
             title="Supprimer cette image"
+            >X</a
           >
-            X
-          </a>
           <img
             src="{{ uploadImagesDir }}{{ image.name }}"
             id="img{{ image.id }}"
-            class="rounded"
+            class="rounded mx-1"
             style="width: 80px; height: 45px; border: 1px solid gray"
             alt=""
           />
@@ -179,16 +187,28 @@
 
   <div class="modal-footer" mat-dialog-actions>
     <button
+      *ngIf="isEdit"
+      pButton
+      pRipple
       mat-dialog-close
       type="button"
-      class="btn btn-secondary"
+      class="mr-5 p-button-raised p-button-secondary"
       data-dismiss="modal"
       (click)="closeModal()"
     >
       Annuler
     </button>
-    <button type="submit" class="btn btn-primary" [disabled]="f.invalid">
+    <button
+      pButton
+      pRipple
+      type="submit"
+      class="p-button-raised p-button-success float-end"
+      [disabled]="recipeForm.invalid"
+    >
+      <i class="pi pi-check" style="font-size: 1rem; margin-right: 7px"></i>
+
       Valider
     </button>
   </div>
+<!--   {{recipeForm.value | json}}-->
 </form>
