--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Zen+Kurenaido&display=swap');
 html,
 body {
@@ -8,8 +8,13 @@ body {
     margin: 0;
     font-family: 'Nunito', sans-serif;
     font-size: 1em;
+    font-family: var(--font-family);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+h3 {
+  font-size: x-large !important;
 }
-
 #wrapper {
     min-height: 75%;
 }
@@ -23,3 +28,81 @@ body {
     border: solid;
 }
 .row { margin-left: 0 !important}
+.head-section{
+  width: 100%;
+  height: 44px;
+}
+.img-card-section{
+  width: 100%;
+  max-height: 190px;
+}
+.card-text-section {
+  width: 100%;
+  max-height: 90px;
+}
+.banner-text{
+  color: #ffffff;
+  margin: 30px auto;
+}
+.profile-img-section{
+  margin: 50px auto;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  border: solid 1px #cccccc;
+}
+.profile-img{
+  border-radius: 50%;
+}
+.profile-details-section{
+  margin: 50px auto;
+  height: 300px;
+}
+.text1{
+  height: 25px;
+  margin-top: 30px;
+  width: 50%;
+}
+.text2{
+  height: 25px;
+  margin-top: 30px;
+  width: 65%;
+}
+.text3{
+  height: 25px;
+  margin-top: 30px;
+  width: 80%;
+}
+.text4{
+  height: 25px;
+  margin-top: 30px;
+  width: 95%;
+}
+
+.head-section:empty, .profile-img-section:empty, .text1:empty, .text2:empty, .text3:empty, .text4:empty{
+  animation: loading 1.1s infinite linear;
+  background: #dedfe1;
+  background-image: -webkit-linear-gradient(to right, #dedfe1 0%, #f2f3f5 20%, #dedfe1 40%, #dedfe1 100%);
+  background-image: linear-gradient(to right, #dedfe1 0%, #f2f3f5 20%, #dedfe1 40%, #dedfe1 100%);
+  background-repeat: no-repeat;
+}
+
+@keyframes loading {
+  0% {
+    background-position: -100px;
+  }
+  100% {
+  background-position: 200px;
+  }
+}
+.info-validation {
+  color:#535353;
+  font-style: italic;
+  font-size: xx-small;
+}
+.font-weight-bold {
+  font-size: large !important;
+}
+.card-subtitle{
+  font-size: small !important;
+}
