feat: upgrade SF4.4 to SF5.4 & upgrading authentication system & refacto front code

--- a/front/src/app/home/last-recipes/last-recipes.component.css
+++ b/front/src/app/home/last-recipes/last-recipes.component.css
@@ -10,7 +10,7 @@
   background-size: cover;
 }
 .mat-card {
-  background: #4f98a7 !important;
+  background: #18738c !important;
   color: #ffffffdb;
 }
 .mat-card-header .mat-card-title {
