--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -21,7 +21,7 @@
     <i class="pi pi-times"></i>
   </a>
 </div>
-<nav class="navbar navbar-expand-lg navbar-light navbar-costum">
+<nav class="navbar navbar-expand-lg bg-light navbar-costum">
   <div class="container">
     <a
       class="navbar-brand nav-link-title"
@@ -31,15 +31,7 @@
       [routerLinkActiveOptions]="{ exact: true }"
       >{{ title }}</a
     >
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
