--- a/front/src/app/recipe/all-recipes/all-recipes.component.html
+++ b/front/src/app/recipe/all-recipes/all-recipes.component.html
@@ -10,30 +10,11 @@
             <p-dataView #dv 
             [value]="recipes" 
             [layout]="layout" 
-            [sortField]="sortField" 
-            [sortOrder]="sortOrder"
             [rows]="nbItemPerPage" 
             [paginator]="false"
             >
                 <ng-template pTemplate="header">
-                    <div style="float:left;" class="flex flex-column md:flex-row mr-5 md:justify-content-between">
-                        <p-dropdown [options]="sortOptions" ngDefaultControl placeholder="Trier par prix" (onChange)="onSortChange($event)" styleClass="mb-2 md:mb-0">
-                            <ng-template let-item pTemplate="selectedItem">
-                                <i class="{{item.icon}}"></i> {{item.label}}
-                           </ng-template>
-                           <ng-template let-object pTemplate="item">
-                                <i class="{{object.icon}}"></i> {{object.label}}
-                           </ng-template>
-                        </p-dropdown>
-                    </div>
-                    <div class="form-search">
-                        <form>
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control form-control-sm" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                                <button class="btn btn-outline-secondary" type="button" id="button-addon2"><span class="pi pi-search"></span></button>
-                              </div>
-                        </form>
-                    </div>
+                    <button class="btn btn-outline-secondary" (click)="onModalFilter()"><i class="pi pi-filter"></i>  Filtre <p-badge *ngIf="filterCount" [value]="filterCount"></p-badge></button>
                     <div class="justify-content-end" style="float:right;">
                         <p-dataViewLayoutOptions [layout]="layout"></p-dataViewLayoutOptions>
                     </div>
@@ -119,4 +100,5 @@
         </div>
     </div>
 </div>
+
 <app-toast></app-toast>
