--- a/front/src/app/footer/footer.component.html
+++ b/front/src/app/footer/footer.component.html
@@ -1,4 +1,7 @@
-<footer class="bg-dfm text-white text-center text-lg-start">
+<div class="dfm-wavy">
+    <img src="./assets/svg/dfm-wavy.svg" alt="wave" class="footer-curvy">
+</div>
+<footer class="bg-dfm text-white text-center text-lg-start wavy-footer">
     <div class="container p-4">
         <div class="row">
             <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
@@ -9,12 +12,14 @@
                 </p>
             </div>
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                <h5 class="text-uppercase">Qui sommes-nous?</h5>
+                <h5 class="text-uppercase">Liens utiles</h5>
 
                 <ul class="list-unstyled mb-0">
                     <li>
                         <a href="#!" class="text-white">Notre politique</a>
                     </li>
+                    <li>
+                        <a href="#!" class="text-white">Qui sommes-nous?</a>
                     <li>
                         <a href="#!" class="text-white">Nos CGU</a>
                     </li>
@@ -41,7 +46,7 @@
             </div>
         </div>
     </div>
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); margin-bottom: -20px;">
         © 2020
         <a class="text-white" href="https://dufaitmaison.com">DuFaitMaison.com</a>
     </div>
