--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -68,8 +68,9 @@
           <a
             class="nav-link-title dropdown-toggle"
             href="#"
-            id="navbarDropdown"
+            id="navbarDropdownMenuLink"
             role="button"
+            (click)="openCloseDD()"
             data-bs-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
@@ -83,8 +84,9 @@
             {{ username }}
           </a>
           <div
-            class="dropdown-menu dropdown-menu-end"
-            aria-labelledby="dropdownMenu"
+            #dropdownZone
+            class="hidden dropdown-menu dropdown-menu-end"
+            aria-labelledby="navbarDropdownMenuLink"
           >
             <a *ngIf="isLogged"
             class="dropdown-item" 
