--- a/front/src/app/home/last-recipes/last-recipes.component.css
+++ b/front/src/app/home/last-recipes/last-recipes.component.css
@@ -5,17 +5,107 @@
 .recipe-card:not(:first-child) {
   margin-left: 1.9rem;
 }
+
 .recipe-header-image {
   background-image: url('https://e7.pngegg.com/pngimages/59/644/png-clipart-silhouette-avatar-line-art-silhouette-animals-vexel.png');
   background-size: cover;
 }
+
 .mat-card {
   background: #18738c !important;
   color: #ffffffdb;
 }
+
 .mat-card-header .mat-card-title {
   font-size: 16px !important;
 }
+
 .mat-card-subtitle {
   color: rgb(255 255 255 / 54%);
+}
+
+
+
+/* Style div elements that have class equal to tag */
+.tag {
+  padding: 4px 8px;
+  border: 1px solid #e5eaed;
+
+  border-radius: 50px;
+  font-size: 12px;
+  font-weight: 400;
+  color: #788697;
+}
+
+span.tag.tag-cat {
+  position: absolute;
+  top: 0px;
+  background: #105e7d;
+  left: 0px;
+  color: #fff;
+  border-radius: 12px;
+}
+
+.tag-user {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: #ffffffcf;
+}
+
+/* Style div elements that have class equal to name */
+.name {
+  font-size: 16px;
+  font-weight: 600;
+
+  margin-top: 16px;
+}
+
+/* Style p element */
+p {
+  font-size: 14px;
+  color: #7f8c9b;
+  line-height: 150%;
+}
+
+/* Style button element */
+button {
+  border: none;
+  padding: 12px 24px;
+  border-radius: 50px;
+
+  font-weight: 600;
+  color: #0077ff;
+  background-color: #e0efff;
+
+  /* Button is inline-block element by default, it need to have block display for margin: 0 auto; to work */
+  margin: 0 auto;
+  display: block;
+
+  /* Button is a clickable element, therefore it should have a pointer cursor */
+  cursor: pointer;
+}
+
+.card__details {
+  /* Add space around the details */
+  padding: 16px 8px 8px 8px;
+}
+
+.card {
+  /* Change background color */
+  background-color: white;
+
+  /* Add border */
+  border: 1px solid #bacdd8;
+  margin-bottom: 15px;
+  /* Add space between the border and the content */
+  padding: 8px;
+
+  border-radius: 12px;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: #ffffff;
+  border: 1px solid #000;
 }
