--- a/front/src/app/home/last-recipes/last-recipes.component.html
+++ b/front/src/app/home/last-recipes/last-recipes.component.html
@@ -1,25 +1,98 @@
-<h4>3 Dernières recettes publiées:</h4>
+
+<h3 *ngIf="isLoaded">10 Dernières recettes publiées:</h3>
+<ngx-skeleton-loader
+    count="1"
+    [theme]="{ 
+      'height.px': 50
+    }"
+    *ngIf="!isLoaded"></ngx-skeleton-loader>
 <hr />
-<div class="row col-12">
-  <mat-card class="col recipe-card" *ngFor="let recipe of recipes">
-    <mat-card-header>
-      <div mat-card-avatar class="recipe-header-image"></div>
-      <mat-card-title>{{ recipe.title | slice : 0 : 30 }}...</mat-card-title>
-      <mat-card-subtitle
-        >{{ recipe.subtitle | slice : 0 : 50 }}...</mat-card-subtitle
-      >
-    </mat-card-header>
-    <img
-      mat-card-image
-      src="{{ dirUploadedImages }}{{ recipe.images[0].name }}"
-      alt="Photo of a Shiba Inu"
-    />
-    <mat-card-content>
-      <p>{{ recipe.description | slice : 0 : 95 }}...</p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
+<div class="block-last-recipes" *ngIf="isLoaded">
+  <swiper-container #swiper 
+  [slides-per-view]="4" 
+  [space-between]="5"
+  class="row col-12" 
+  style="--swiper-navigation-color: #105e7d; --swiper-pagination-color: #105e7d"
+  autoplay="true"
+  [breakpoints]="{
+    '640': {
+      slidesPerView: 2,
+      spaceBetween: 10
+    },
+    '768': {
+      slidesPerView: 3,
+      spaceBetween: 5
+    },
+    '1024': {
+      slidesPerView: 4,
+      spaceBetween: 5
+    }
+  }" 
+   navigation="true"
+  >
+    <swiper-slide *ngFor="let recipe of recipes" class="col-4">
+    <div class="card">
+    <img src="{{ dirUploadedImages }}{{ recipe.images[0].name }}" height="180" alt="{{recipe.title}}">
+
+    <!-- A div with card__details class to hold the details in the card  -->
+    <div class="card__details">
+
+      <!-- Span with tag class for the tag -->
+      <span class="tag tag-cat"><i class="pi pi-tag"></i> {{ getCategoryName(recipe.category) }}</span>
+      &nbsp;
+      <span class="tag tag-user"><i class="pi pi-user"></i>  {{ recipe.creator.username }} </span>
+      <span class="tag"><i class="pi pi-map-marker"></i>  {{ commonUtils.localityToString(recipe.locality) }} </span>
+      <!-- A div with name class for the name of the card -->
+      <div class="name">{{recipe.title | slice : 0 : 25 }}...</div>
+      <u>{{ recipe.subtitle | slice : 0 : 40 }}...</u>
+      <p>{{ recipe.description | slice : 0 : 35 }}...</p>
+
+      <button [routerLink]="['/recipe/details', recipe.id]">Découvrir</button>
+    </div>
+  </div>
+  </swiper-slide>
+</swiper-container>
+</div>
+<div class="container" *ngIf="!isLoaded">
+  <div class="row">
+    <div *ngFor="let n of [0, 1, 2, 3]" class="col-md-3"> <!-- Utilisation de col-md-3 pour créer 4 colonnes côte à côte sur les écrans moyens et plus grands -->
+      <div class="card">
+        <ngx-skeleton-loader
+          count="1"
+          [theme]="{
+            'border-radius': '5px',
+            height: '100px'
+          }"
+        ></ngx-skeleton-loader>
+        <ngx-skeleton-loader
+        count="1"
+        [theme]="{
+          'border-radius': '30px',
+          height: '25px',
+          width: '180px',
+          'margin-top': '5px'
+        }"
+      ></ngx-skeleton-loader>
+        <div class="card__details">
+          <ngx-skeleton-loader
+            count="3"
+            [theme]="{
+              height: '5px'
+            }"
+          ></ngx-skeleton-loader>
+        </div>
+        <div class="d-flex justify-content-center align-items-center">
+        <ngx-skeleton-loader
+          count="1"
+          [theme]="{
+            'border-radius': '30px',
+            height: '40px',
+            width: '120px',
+            'margin-top': '5px'
+          }"
+        ></ngx-skeleton-loader>
+      </div>
+      </div>
+    </div>
+  </div>
 </div>
