--- a/front/src/app/sharing/filter/filter.component.css
+++ b/front/src/app/sharing/filter/filter.component.css
@@ -23,3 +23,7 @@
     margin: 15px 0 0 0;
     /* Aligner les boutons à droite dans le pied de la modal */
 }
+
+button.btn-reset {
+    margin-right: 5px;
+}
