--- a/front/src/app/recipe/recipe-details/recipe-details.component.html
+++ b/front/src/app/recipe/recipe-details/recipe-details.component.html
@@ -86,6 +86,9 @@
       </div>
     </div>
     <div *ngIf="loadingCompleted">
+    <p *ngIf="!isOwnRecipe()" style="float:right; cursor:pointer; text-decoration-line: underline;" (click)="reportRecipeOpenDialog()">
+      <i class="fa fa-flag" aria-hidden="true"></i>&nbsp;Signaler
+    </p>
     <h1 class="recipe-title">{{ recipe.title }}</h1>
     <span>
       <p class="recipe-subtitle">{{ recipe.subtitle }}</p>
@@ -93,11 +96,15 @@
     <p class="recipe-price line-details"><i class="fa fa-money" aria-hidden="true"></i>&nbsp;Prix:<span class="price float-end">{{ recipe.price }}€</span></p>
     <p class="recipe-category line-details"><i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Catégorie: <span class="float-end text-black-50">{{ recipe.category }}</span></p>
     <p class="recipe-status line-details" *ngIf="recipe.status !== 'published'"><i class="fa fa-recycle" aria-hidden="true"></i>&nbsp; Status: <span class="float-end text-black-50">{{ getStatusName(recipe.status) }}</span></p>
-    <p class="recipe-creator line-details" *ngIf="recipe.creator"><i class="pi pi-user" aria-hidden="true"></i>&nbsp;Postée par: <span class="float-end text-black-50">{{ recipe.creator.username }}</span></p>
+    <p class="recipe-creator line-details" *ngIf="recipe.creator && !isOwnRecipe()"><i class="pi pi-user" aria-hidden="true"></i>&nbsp;Postée par: <span class="float-end text-black-50">{{ recipe.creator.username }}</span></p>
     
-    <div class="mb-5" *ngIf="recipe.creator && recipe.creator.id !== loggedInUser.id" role="group" aria-label="boutons de la fiche recette">
-      <button class="btn btn-primary" (click)="recipeOwnerContactOpenDialog()"><i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;Contacter le cuisinier</button>
-      <button class="btn btn-secondary" style="float:right" (click)="reportRecipeOpenDialog()"><i class="fa fa-flag" aria-hidden="true"></i>&nbsp;Signaler</button>
+    <div class="mb-5" *ngIf="!isOwnRecipe()" role="group" aria-label="boutons de la fiche recette">
+      <button class="btn btn-primary" (click)="recipeOwnerContactOpenDialog()">
+        <i class="fa fa-comments-o" aria-hidden="true"></i>&nbsp;Contacter le cuisinier
+      </button>
+      <button class="btn btn-secondary" style="float:right">
+        <i class="fa fa-credit-card" aria-hidden="true"></i> Payer
+      </button>
     </div>
     <div id="map" style="height: 200px;">
     </div>
