--- a/front/src/app/recipe/recipe-details/recipe-details.component.html
+++ b/front/src/app/recipe/recipe-details/recipe-details.component.html
@@ -1,5 +1,5 @@
 <div class="container" id="wrapper">
-<div class="recipe-details row col-12 shadow-sm p-3 mb-0 bg-white rounded mt-5">
+<div class="main-card row col-12 shadow-sm p-3 mb-0 bg-white rounded mt-5">
   <div class="recipe-images col-lg-7 col-md-12">
     
 
