--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Zen+Kurenaido&display=swap');
 @import "~@ng-select/ng-select/themes/default.theme.css";
 @import url('https://fonts.googleapis.com/css2?family=NTR&family=Niramit:wght@200&family=Poppins:wght@300&family=Tenor+Sans&display=swap');
+@import '~@swimlane/ngx-datatable/assets/icons.css';
 
 html,
 body {
