--- a/front/src/app/recipe/recipe-details/recipe-details.component.css
+++ b/front/src/app/recipe/recipe-details/recipe-details.component.css
@@ -12,7 +12,7 @@ span>p.recipe-subtitle {
     font-size: .9rem;
 }
 
-.recipe-details {
+.main-card {
     padding-top: 20px;
     margin-bottom: 20px;
 }
