--- a/front/src/app/sharing/forms/message/message.component.css
+++ b/front/src/app/sharing/forms/message/message.component.css
@@ -1,6 +1,6 @@
 .register-photo {
     background: #f1f7fc;
-    padding: 80px 0;
+    padding: 20px 0;
 }
 
 a.close {
@@ -22,6 +22,7 @@ a.close {
 .register-photo .form-container {
     display: table;
     max-width: 900px;
+    height: 32vh;
     width: 90%;
     margin: 0 auto;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
